@@ -4,7 +4,7 @@
  * @license http://www.zen-cart.com/license/2_0.txt GNU Public License V2.0
  * @version $Id:  $
  *
- * Updated for Stock by Attributes 1.5.2 by POTTERYHOUSE
+ * Updated for Stock by Attributes 1.5.2
  */
  
 #loading {
