@@ -6,7 +6,7 @@
  * @license http://www.zen-cart.com/license/2_0.txt GNU Public License V2.0
  * @version $Id: packingslip.php 15788 2010-04-02 10:44:40Z drbyte $
  * 
- * Updated for Stock by Attributes 1.5.2 by POTTERYHOUSE
+ * Updated for Stock by Attributes 1.5.2
 */
 
   require('includes/application_top.php');
