@@ -5,7 +5,7 @@
  * @license http://www.zen-cart.com/license/2_0.txt GNU Public License V2.0
  * @version $Id: products_with_attributes_stock_ajax.php 389 2008-11-14 16:02:14Z hugo13 $
  * 
- * Updated for Stock by Attributes 1.5.2 by POTTERYHOUSE
+ * Updated for Stock by Attributes 1.5.2
  */
  
 require('includes/application_top.php');
