@@ -1,5 +1,5 @@
 <?php
 /* stock_by_attribute
- * Updated for Stock by Attributes 1.5.1.2 by POTTERYHOUSE
+ * Updated for Stock by Attributes 1.5.1.2
 */
 define('TABLE_PRODUCTS_WITH_ATTRIBUTES_STOCK', DB_PREFIX . 'products_with_attributes_stock');
